feat: adicionado novos assets

--- a/index.html
+++ b/index.html
@@ -1395,7 +1395,7 @@
 <footer>
   <div class="container">
     <p>
-      © 2025 Crianças Seguras na Internet · Todos os direitos reservados<br>
+      © 2026 EJUP Digital · Todos os direitos reservados<br>
       Este produto é distribuído digitalmente pela plataforma Hotmart.<br>
       <span style="margin-top:8px; display:inline-block;">🛡️ Educar para proteger — porque a melhor segurança começa no diálogo.</span>
     </p>
